crates/biome_html_parser/tests/html_specs/error/svelte/directives/directive_member_expression_invalid.svelte
<!-- trailing dot, no member -->
<div in:renderer.></div>
<!-- leading dot, no object -->
<div in:.something></div>
<!-- consecutive dots -->
<div in:a..b></div>
